--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.5",
+    "dayjs": "^1.11.18",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.13"
   },
